--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -20,8 +20,8 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-config" content="./favico/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<!-- 
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <title>Ресторан "Рыба"</title>
 </head>
 
