--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -12,21 +11,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="./favico/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favico/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favico/favicon-16x16.png">
-<link rel="manifest" href="./favico/site.webmanifest">
-<link rel="mask-icon" href="./favico/safari-pinned-tab.svg" color="#000000">
-<link rel="shortcut icon" href="./favico/favicon.ico">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-config" content="./favico/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
-<!-- 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./favico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favico/favicon-16x16.png">
+  <link rel="manifest" href="./favico/site.webmanifest">
+  <link rel="mask-icon" href="./favico/safari-pinned-tab.svg" color="#000000">
+  <link rel="shortcut icon" href="./favico/favicon.ico">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-config" content="./favico/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="keywords" content="Отметить день рождения, семейный ресторан, пиво, морепродукты, устрицы, местная рыба,раки, местная кухня, детский уголок,суши,доставка"/>
+  <meta name="description" content="Ресторан Рыба - одно из немногих мест в Ростове, где можно вкусить все прелести рыбной кухни как местного, донского направления, так и привозимых из дальних регионов. Мы готовим блюда из свежайшей рыбы, приготовленные по особым рецептам шеф-поваров. У нас вы можете попробовать разнообразные закуски, супы, горячие и холодные блюда, готовые на гриле, в духовке и на пару. Мы бережно относимся к качеству продуктов, атмосфера в нашем ресторане создает уют и комфорт, чтобы каждый гость мог насладиться вкусом и атмосферой рыбного уюта. Посетите ресторан Рыба и насладитесь неповторимым вкусом морской путешествие прямо в самом центре Ростова."/>
+
   <title>Ресторан "Рыба"</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
 </body>
